# Voice-Agent-using-whisper.cpp

./: Voice Assistant.bat
examples/: CMakeLists.txt
examples/voice-agent/: CMakeLists.txt  README.md  commands.txt  voice-agent.cpp
